--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,6 +3,6 @@
     Home
   </a>
   <a href="/about.html" {% if page.url == "/about.html" %}style="color: red;"{% endif %}>
-    About
+    About me
   </a>
 </nav>
