--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,3 +6,31 @@
     About me
   </a>
 </nav>
+
+<style>
+    nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        right: 0;
+    }
+
+    nav li {
+        float: left;
+    }
+
+    nav li a {
+        display: block;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    /* Additional styling for navigation links */
+    nav li a:hover {
+        background-color: #ddd;
+    }
+</style>
