--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+     padding-top: 140px; /* Adjust this value as needed */
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;;
     background-color: #f0f0f0;
 }
 
