--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,23 @@
 body {
     font-family: Arial, sans-serif;
-    padding:40px;
+    padding:20px;
 }
 
 header {
     display: flex;
     justify-content: space-between;
-    padding:40px;
+    padding:20px;
     background-color: #f0f0f0;
 }
 
 .header-left {
     font-size: 24px;
+    padding-top:50px;
 }
 
 .header-right a {
     margin-left: 20px;
+    padding-top:50px;
     text-decoration: none;
     color: #333;
 }
