--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 body {
     font-family: Arial, sans-serif;
+    padding:100px;
 }
 
 header {
     display: flex;
     justify-content: space-between;
+    padding:100px;
     background-color: #f0f0f0;
 }
 
