--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ page.Home_title }}</title>
+    <title>{{ site.Home_title }}</title>
   </head>
   <body>
     {{ content }}
