--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <title>{{ page.Home_title }}</title>
   </head>
   <body>
+    {% include navigation.html %}
     {{ content }}
     Hello Welcome!
   </body>
