--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<nav style="text-align: right;">
+<nav style="text-align: right; margin-top: 20px;">
   <a href="/">Home</a>
   <a href="/about.html">About</a>
 </nav>
