--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,7 @@
     <title>{{ page.Home_title }}</title>
   </head>
   <body>
-    {% include navigation.html %}
-    {{ content }}
+    {{ content }} {% include navigation.html %}
     Hello Welcome!
   </body>
 </html>
