--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
     <title>{{ page.Home_title }}</title>
   </head>
   <body>
-    {{ content }} {% include navigation.html %}
+    {% include navigation.html %}
+    {{ content }}
     Hello Welcome!
   </body>
 </html>
