--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,6 @@
-<nav style="text-align: right;">
-  <a href="/">Home</a>
-  <a href="/about.html">About</a>
-</nav>
+<header style="text-align: right;">
+  <nav>
+    <a href="/">Home</a>
+    <a href="/about.html">About</a>
+  </nav>
+</header>
