--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<header style="text-align: right;">
+<header style="text-align: right; margin-top: 20px;">
   <nav>
     <a href="/">Home</a>
     <a href="/about.html">About</a>
