--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,7 @@
-<header style="text-align: right; margin-top: 20px;">
+<header style="display: flex; justify-content: space-between; align-items: center; margin-top: 20px;">
+  <div style="margin-left: 20px;">Your Site Title</div>
   <nav>
-    <a href="/">Home</a>
+    <a href="/" style="margin-right: 15px;">Home</a>
     <a href="/about.html">About</a>
   </nav>
 </header>
