--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>{{ page.Home_title }}</title>
   </head>
+  {% include navigation.html %}
   <body>
     {{ content }}
     Hello Welcome!
