--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <title>{{ page.Home_title }}</title>
   </head>
   {% include navigation.html %}
+  </head>
   <body>
     Hello Welcome!
   </body>
