--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <header style="display: flex; justify-content: space-between; align-items: center; margin-top: 20px;">
-  <div style="margin-left: 20px;"><title>{{ page.Home_title }}</title>title></div>
+  <div style="margin-left: 20px;">{{ page.Home_title }}</div>
   <nav>
     <a href="/" style="margin-right: 15px;">Home</a>
     <a href="/about.html">About</a>
