--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,4 @@
-<header style="display: flex; justify-content: space-between; align-items: center; margin-top: 20px;">
-  <div style="margin-left: 20px;"><title>{{ page.Home_title }}</title></div>
+<header>
   <nav>
     <a href="/" style="margin-right: 15px;">Home</a>
     <a href="/about.html">About</a>
