--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>{{ page.Home_title }}</title>
   </head>
+  <head>
+  <title>{{ page.Home_title }}</title>
+  </head>
   <body>
     {% include navigation.html %}
     Hello Welcome!
