--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <a href="/" style="margin-right: 15px;">Home</a>
             <a href="/about.html">About</a>
         </nav>
-        <div class="site-title">{{ page.Home_title }}</div>
+        <div class="site-title">{{ site.Home_title }}</div>
     </header>
     Hello, welcome!
 </body>
