--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,13 @@
 <!doctype html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
-    <title>{{ page.Home_title }}</title>
-    <style>
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 20px;
-        }
-        nav {
-            margin-left: 20px; /* Adjusts navigation to the left */
-        }
-        .site-title {
-            margin-right: 20px; /* Adjusts title to the right */
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="/" style="margin-right: 15px;">Home</a>
-            <a href="/about.html">About</a>
-        </nav>
-        <div class="site-title">{{ site.Home_title }}</div>
-    </header>
-    Hello, welcome!
-</body>
+    <title>{{ page.title }}</title>
+  </head>
+  <body>
+    <head>
+    {% include navigation.html %}
+    </head>
+    {{ content }}
+  </body>
 </html>
