--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,6 @@
 <header>
-  <nav>
+  <title>{{ page.title }}</title>
+  <nav style="text-align: right;>
     <a href="/" style="margin-right: 15px;">Home</a>
     <a href="/about.html">About</a>
   </nav>
