--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <header>
-  {{ page.title }}
+  {{ page.Home_title }}
   <nav style="text-align: right;>
-    <a href="/" style="margin-right: 15px;">Home</a>
+    <a href="/">Home</a>
     <a href="/about.html">About</a>
   </nav>
 </header>
