--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <header>
-  {{ page.Home_title }}
+  {{ site.Home_title }}
   <nav style="text-align: right;>
     <a href="/">Home</a>
     <a href="/about.html">About</a>
