--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,5 @@
 <header>
-  {{ site.Home_title }}
-  <nav style="text-align: right;>
+  {{ site.Home_title }}<nav style="text-align: right;>
     <a href="/">Home</a>
     <a href="/about.html">About</a>
   </nav>
