--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
             <a href="/">Home</a>
             <a href="/about.html">About</a>
         </nav>
-        <div class="site-title">{{page.Home_title}}</div>
+        <div class="site-title">{{site.Home_title}}</div>
     </header>
     Hello Welcome!
 </body>
