--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <!-- Page Header -->
 {% if page.background %}
-<header class="masthead" >
+<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
   {% else %}
   <header class="masthead">
     {% endif %}
@@ -22,7 +22,7 @@ layout: default
       </div>
     </div>
   </header>
-<body style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')"
+
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
@@ -32,4 +32,3 @@ layout: default
       </div>
     </div>
   </div>
-</body>
