--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,7 @@ layout: default
     }
   </style>
     {% endif %}
+<body>
   <header class="masthead">
     <div class="overlay"></div>
     <div class="container">
@@ -37,3 +38,4 @@ layout: default
       </div>
     </div>
   </div>
+</body>
