--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
   </style>
     {% endif %}
 <body>
-  
+  <header>
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -27,7 +27,7 @@ layout: default
         </div>
       </div>
     </div>
-  
+  </header>
 
   <div class="container">
     <div class="row">
