--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,9 +11,9 @@ layout: default
       background-position: center; /* Center the background image */
     }
   </style>
+  {% else %}
+  <header class="masthead">
     {% endif %}
-<body>
-  <header>
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -38,4 +38,3 @@ layout: default
       </div>
     </div>
   </div>
-</body>
