--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,13 +4,7 @@ layout: default
 
 <!-- Page Header -->
 {% if page.background %}
-  <style>
-    body {
-      background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}');
-      background-size: cover; /* Ensure it covers the entire page */
-      background-position: center; /* Center the background image */
-    }
-  </style>
+<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
   {% else %}
   <header class="masthead">
     {% endif %}
