--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,8 @@ layout: default
 ---
 
 <!-- Page Header -->
-{% if page.background %}
-<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
-  {% else %}
+style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')"
+
   <header class="masthead">
     {% endif %}
     <div class="overlay"></div>
