--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Page Header -->
-style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')"
+<body style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
 
   <header class="masthead">
     
@@ -31,3 +31,4 @@ style="background-image: url('{{ page.background | prepend: site.baseurl | repla
       </div>
     </div>
   </div>
+</body>
