--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 
-<!-- Page Header -->
-<body style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
-
+{% if page.background %}
+<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+  {% else %}
   <header class="masthead">
-    
+    {% endif %}    
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -31,4 +31,3 @@ layout: default
       </div>
     </div>
   </div>
-</body>
