--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,19 @@
 ---
 layout: default
 ---
-
 {% if page.background %}
-<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
-  {% else %}
+  <style>
+    body {
+      background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}');
+      background-size: cover; /* Cover the entire page */
+      background-position: center center; /* Center the background image */
+      background-attachment: fixed; /* Optional: Fixes the background image during scroll */
+    }
+  </style>
+{% endif %}
+
+<body>
   <header class="masthead">
-    {% endif %}    
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -14,7 +21,7 @@ layout: default
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
             {% if site.description %}
-            <span class="subheading">{{ site.description }}</span>
+              <span class="subheading">{{ site.description }}</span>
             {% endif %}
           </div>
         </div>
@@ -25,9 +32,8 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-
         {{ content }}
-
       </div>
     </div>
   </div>
+</body>
