--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,18 +1,12 @@
 ---
 layout: default
 ---
+<!-- Page Header -->
 {% if page.background %}
-  <style>
-    body {
-      background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}');
-      background-size: cover; /* Cover the entire page */
-      background-position: center center; /* Center the background image */
-      background-attachment: fixed; /* Optional: Fixes the background image during scroll */
-    }
-  </style>
-{% endif %}
-
-<body>
+<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+  {% else %}
+  <header class="masthead">
+    {% endif %}
   <header class="masthead">
     <div class="overlay"></div>
     <div class="container">
@@ -36,4 +30,3 @@ layout: default
       </div>
     </div>
   </div>
-</body>
