--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,11 +2,10 @@
 layout: default
 ---
 <!-- Page Header -->
-{% if page.background %}
-<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
-  {% else %}
+<style>
+  background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')
+  </style>
   <header class="masthead">
-    {% endif %}  
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
