--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,10 +2,11 @@
 layout: default
 ---
 <!-- Page Header -->
-<style>
-  background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')
-  </style>
+{% if page.background %}
+<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+  {% else %}
   <header class="masthead">
+    {% endif %}
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
