--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,17 @@ layout: default
 ---
 <!-- Page Header -->
 {% if page.background %}
-<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
-  {% else %}
+  <style>
+    body {
+      background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}');
+      background-size: cover; /* Cover the entire page */
+      background-position: center center; /* Center the background image */
+      background-attachment: fixed; /* Optional: Fixes the background image during scroll */
+    }
+  </style>
+{% endif %}
+<body>
   <header class="masthead">
-    {% endif %}
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -29,3 +36,4 @@ layout: default
       </div>
     </div>
   </div>
+</body>
