--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,17 +3,10 @@ layout: default
 ---
 <!-- Page Header -->
 {% if page.background %}
-  <style>
-    body {
-      background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}');
-      background-size: cover; /* Cover the entire page */
-      background-position: center center; /* Center the background image */
-      background-attachment: fixed; /* Optional: Fixes the background image during scroll */
-    }
-  </style>
-{% endif %}
-<body>
+<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+  {% else %}
   <header class="masthead">
+    {% endif %}
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -21,7 +14,7 @@ layout: default
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
             {% if site.description %}
-              <span class="subheading">{{ site.description }}</span>
+            <span class="subheading">{{ site.description }}</span>
             {% endif %}
           </div>
         </div>
@@ -36,4 +29,3 @@ layout: default
       </div>
     </div>
   </div>
-</body>
