--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,8 +12,8 @@ layout: default
     }
   </style>
 {% endif %}
-<body>
-  <header class="masthead">
+<body class="masthead">
+  <header>
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
