--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,8 +12,8 @@ layout: default
     }
   </style>
 {% endif %}
-<body class="masthead">
-  <header>
+<body>
+  <header class="masthead">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
