--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,6 +32,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+        color: white
         {{ content }}
       </div>
     </div>
