--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,7 +18,7 @@
           <a class="nav-link" href="{{ "/VFX" | relative_url }}">VFX</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
+          <a class="nav-link" href="{{"/tech" | relative_url }}">Tech</a>
         </li>
       </ul>
     </div>
