--- a/_layouts/tech_layout.html
+++ b/_layouts/tech_layout.html
@@ -28,7 +28,7 @@ layout: default
         </div>
       </div>
     </div>
-    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/skills.css' | relative_url }}">
   </header>
 
   <div class="container">
