--- a/assets/skills.css
+++ b/assets/skills.css
@@ -14,7 +14,7 @@
 }
 
 .skills-overview .skill-list li {
-    background-color: #000000;
+    /* background-color: #000000; */
     margin-bottom: 5px;
     padding: 5px;
     border-radius: 5px;
